--- a/admin.scss
+++ b/admin.scss
@@ -7,3 +7,11 @@
     background: $gray-800;
   }
 }
+
+a[data-toggle="collapse"] {
+  &[aria-expanded="true"] {
+    .fas.fa-chevron-left {
+      transform: rotate(270deg);
+    }
+  }
+}
