--- a/admin.scss
+++ b/admin.scss
@@ -1,17 +1,19 @@
 @import "~bootstrap/scss/bootstrap";
 
-.nav-link {
-  color: $light;
-  &:hover {
+#sidebar {
+  .nav-link {
     color: $light;
-    background: $gray-800;
+    &:hover {
+      color: $light;
+      background: $gray-800;
+    }
   }
-}
-
-a[data-toggle="collapse"] {
-  &[aria-expanded="true"] {
-    .fas.fa-chevron-left {
-      transform: rotate(270deg);
+  
+  a[data-toggle="collapse"] {
+    &[aria-expanded="true"] {
+      .fas.fa-chevron-left {
+        transform: rotate(270deg);
+      }
     }
   }
 }
